--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.huawei.agconnect'
-apply plugin: 'com.huawei.agconnect.apms'
 
 android {
     compileSdkVersion 28
     buildToolsVersion "30"
 
     defaultConfig {
-        applicationId "com.huawei.photoplaza.agc"
-        minSdkVersion 24
+        applicationId "com.huawei.agc.photoplaza"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.6.0.300"
+        versionName "1.6.1.300"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,6 +42,10 @@ android {
     }
 }
 
+agcp {
+    enableAPMS true
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -65,13 +68,13 @@ dependencies {
     implementation "com.huawei.agconnect:agconnect-storage:1.3.1.200"
     // AGC Quality SDK
     implementation 'com.huawei.agconnect:agconnect-crash:1.6.0.300'
-    implementation 'com.huawei.agconnect:agconnect-apms:1.5.1.303'
+    implementation 'com.huawei.agconnect:agconnect-apms:1.5.2.305'
     // AGC Growing SDK
     implementation 'com.huawei.agconnect:agconnect-appmessaging:1.6.0.300'
     implementation 'com.huawei.agconnect:agconnect-remoteconfig:1.6.0.300'
     implementation 'com.huawei.agconnect:agconnect-applinking:1.6.0.300'
-    //  HMS Core SDK
-    implementation 'com.huawei.hms:hianalytics:5.3.1.300'
-    implementation 'com.huawei.hms:push:5.1.1.301'
+    // HMS Core SDK
+    implementation 'com.huawei.hms:hianalytics:6.2.0.300'
+    implementation 'com.huawei.hms:push:5.3.0.301'
 
 }
